updated padding in button

--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ header > div {
 button {
   width: 342px;
   height: 40px;
-  padding: 10px;
+  padding: 12px 125px;
   margin: 0 62px 5px 58px;
   background-color: #ff6b82;
   border-radius: 4px;
