removed border radius

--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body {
   /* height: 603px; */
   /* padding: 30px 50px; */
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 
 header {
